# second-brain

./: .envrc  .gitignore  AGENTS.md  INDEX.md  INSTALL.md  README.md  Readme.md  flake.nix  inbox.md  pyproject.toml  sync-repos.txt
.obsidian/: app.json  appearance.json  community-plugins.json  workspace.json
1-PROJECT/: 1-PROJECT.md  LLM thesis.md
1-Projects/AI-Generated-Paper-Content-Detection/: AGENTS.md  Brief.md  Dead-ends.md  Experiments.md  SYNC_STATUS.md  TODO.md  decisions.md  project.md  system-visualization.html  tasks.md
1-Projects/Baseline-Model-for-NDT-Data/: AGENTS.md  Brief.md  Dead-ends.md  Decisions.md  Experiments.md  INDEX.md  LabelingSpec.md  Project.md  Results.md  SYNC_STATUS.md  TODO.md  _bridge.md  decisions.md  project.md  results.md  split_protocol.md  tasks.md  workflow.md
1-Projects/Master-Exercises/: INDEX.md  project.md  tasks.md
1-Projects/Smart-Sensor-Paper/: project.md  tasks.md
1-Projects/Smart-Sensor-Systems-Slides/: AGENTS.md  Brief.md  Chapter1-Outline.md  (+16 more)
2-AREA/: 2-AREA.md  Lil’Log in C++.md
3-RESOURCE/: 3-RESOURCE.md
3-Resources/: PHYSICAL_AI_PAPER_SEARCH_KEYWORDS.md  research-workflow.html
4-ARCHIVE/: 4-ARCHIVE.md
_templates/: execution-repo-AGENTS-snippet.md
daily/: 2026-05-26.md  2026-05-27.md  2026-05-28.md  2026-05-29.md  2026-06-01.md  2026-06-02.md  2026-06-03.md  2026-06-04.md  2026-06-05.md  2026-06-06.md  2026-06-07.md  2026-06-09.md  2026-06-10.md  2026-06-11.md  2026-06-12.md  2026-06-23.md  2026-06-24.md  2026-06-25.md
scripts/: sync-workbase.sh
weekly/: 2026-W24.md  2026-W25.md  2026-W26.md
(+131 files in other folders)
