[project]
name = "second-brain"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "defusedxml>=0.7.1",
    "lxml>=6.1.0",
    "markitdown[all]>=0.1.5",
    "openpyxl>=3.1.5",
    "pdf2image>=1.17.0",
    "pdfplumber>=0.11.9",
    "pillow>=12.2.0",
    "pypdf>=6.11.0",
    "pyyaml>=6.0.3",
]
